# machine-psychology-kb

./: .gitignore  CLAUDE.md  CONFIGURE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: update-lint-counter.sh
.github/workflows/: deploy-site.yml
assets/: expose.tex
site/: package.json  quartz.config.ts  quartz.layout.ts  sync-content.mjs
wiki/: index.md  log.md  overview.md
wiki/concepts/: emergent-abilities.md  in-context-learning.md  performance-competence-distinction.md
wiki/crosswalk/: coverage-map.md
wiki/debates/: machine-psychology-terminology.md  test-validity-sufficiency.md  theory-of-mind-in-llms.md
wiki/entities/: alex-wilf.md  desmond-ong.md  elif-akata.md  eric-schulz.md  fulin-guo.md  ishita-dasgupta.md  james-strachan.md  jen-tse-huang.md  jingru-jia.md  john-hartley.md  julia-hirschberg.md  julian-coda-forno.md  marcel-binz.md  max-pellert.md  michal-kosinski.md  niklas-kiehne.md  roshni-lulla.md  steffen-backmann.md  thilo-hagendorff.md  tomer-ullman.md  xiachong-feng.md  yu-lei.md  yuan-li.md  zhenhua-wang.md
wiki/findings/: llm-conservative-moral-leaning.md  llm-personality-profiles-homogeneous.md  no-llm-study-meets-validity-requirements.md  self-report-prompt-sensitivity.md
wiki/instruments/: acme.md  affect-grid.md  autism-spectrum-quotient.md  big-five-inventory.md  big-five-vignette-test.md  bigtom.md  cogbench.md  cognitive-reflection-test.md  emobench.md  emotionbench-situation-set.md  gender-sex-diversity-beliefs-scale.md  globe-culture-questionnaire.md  guo-game-prompts.md  honeset.md  ipip-neo-300.md  (+14 more)
(+211 files in other folders)
